--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   productinfoviewer :
     container_name: productinfoviewer
@@ -8,3 +7,20 @@ services:
     volumes:
     - ./modules:/app/modules
     - ./.streamlit:/app/.streamlit
+    depends_on:
+      - redis
+    environment:
+      - REDIS_HOST=redis_container
+    
+
+  redis:
+    container_name: redis_container
+    image: redis:latest
+    ports:
+    - "6379:6379"
+
+
+
+networks:
+  streamlit_network:
+    external: true
