--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-services:
+servis:
   productinfoviewer :
     container_name: productinfoviewer
     build: .
@@ -11,6 +11,7 @@ services:
       - redis
     environment:
       - REDIS_HOST=redis_container
+      - TZ=Asia/Shanghai
     
 
   redis:
@@ -18,6 +19,8 @@ services:
     image: redis:latest
     ports:
     - "6379:6379"
+    environment:
+      - - TZ=Asia/Shanghai
 
 
 
